# sepia

./: .taplo.toml  Cargo.toml  PLAN.md  README.md  pixi.toml
.github/workflows/: ci.yml  release.yml
assets/inspect/: script.js  style.css
examples/: basilisk-windowed-browse.toml  crates-io-search.toml  hacker-news-browse.toml  marginalia-search.toml  wikipedia-search.toml
schemas/: sepia-script.schema.json
skills/sepia/: SKILL.md
src/: browser.rs  config.rs  encoder.rs  github.rs  inspect.rs  lib.rs  main.rs  metadata.rs  pr.rs  preflight.rs  runner.rs  session.rs  skill_installer.rs  timeline.rs  uploader.rs
src/progress/: cli.rs  mod.rs  tree.rs
src/snapshots/: sepia__config__tests__snapshots_multiple_actions_diagnostic.snap  sepia__config__tests__snapshots_unknown_field_diagnostic.snap
tests/: cli_run.rs  cli_skill.rs
